# check-system

./: README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
src/check_system/: __init__.py  __main__.py  check_system.py  cli.py  markers.py
tests/: test_cli.py  test_lib.py
